rubah index html

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,80 +1,131 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil Neon</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kota Futuristik 2035</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
-
-    body {
+    * {
       margin: 0;
       padding: 0;
-      background-color: #0f0f0f;
-      color: #00ffe0;
-      font-family: 'Orbitron', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      box-sizing: border-box;
+    }
+
+    body {
+      background: linear-gradient(to top, #000, #111);
+      overflow: hidden;
       height: 100vh;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
     }
 
-    .card {
-      background: #1c1c1c;
-      border: 2px solid #00ffe0;
-      box-shadow: 0 0 20px #00ffe0;
-      padding: 2rem;
-      border-radius: 15px;
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    .sky {
+      position: absolute;
+      width: 100%;
+      height: 60%;
+      background: linear-gradient(to top, #1a1a40, #000033);
+      z-index: 0;
     }
 
-    .card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 30px #00ffe0;
+    .stars {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: transparent;
+      z-index: 1;
+      animation: twinkle 2s infinite ease-in-out alternate;
     }
 
-    .avatar {
-      width: 120px;
-      height: 120px;
+    .star {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
       border-radius: 50%;
-      border: 3px solid #00ffe0;
-      margin-bottom: 1rem;
     }
 
-    h1 {
-      margin: 0;
-      font-size: 2rem;
+    @keyframes twinkle {
+      0% { opacity: 0.2; }
+      100% { opacity: 1; }
     }
 
-    p {
-      font-size: 1rem;
-      margin-top: 0.5rem;
+    .city {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 40%;
+      background: linear-gradient(to top, #222, #333);
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-end;
+      z-index: 2;
     }
 
-    .socials a {
-      margin: 0 0.5rem;
-      color: #00ffe0;
-      text-decoration: none;
-      font-size: 1.2rem;
-      transition: color 0.3s ease;
+    .building {
+      width: 30px;
+      background: #0ff;
+      box-shadow: 0 0 10px #0ff;
+      margin: 0 5px;
+      border-radius: 3px 3px 0 0;
+      animation: lightPulse 3s infinite;
     }
 
-    .socials a:hover {
-      color: #ff00c8;
+    @keyframes lightPulse {
+      0%, 100% { box-shadow: 0 0 10px #0ff; }
+      50% { box-shadow: 0 0 30px #0ff; }
+    }
+
+    .hover-car {
+      position: absolute;
+      bottom: 80px;
+      width: 60px;
+      height: 30px;
+      background: #f0f;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #f0f;
+      animation: flyCar 6s linear infinite;
+      z-index: 3;
+    }
+
+    @keyframes flyCar {
+      0% { left: -100px; }
+      100% { left: 110%; }
+    }
+
+    .title {
+      position: absolute;
+      top: 20px;
+      width: 100%;
+      text-align: center;
+      font-size: 2em;
+      z-index: 4;
+      text-shadow: 0 0 10px #0ff;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <img src="https://i.pravatar.cc/150?img=8" alt="Avatar" class="avatar" />
-    <h1>Jane Doe</h1>
-    <p>Web Developer & Designer</p>
-    <div class="socials">
-      <a href="#">🌐</a>
-      <a href="#">🐦</a>
-      <a href="#">📷</a>
+  <div class="sky">
+    <div class="stars">
+      <!-- Random stars -->
+      <div class="star" style="top:10%; left:20%"></div>
+      <div class="star" style="top:30%; left:70%"></div>
+      <div class="star" style="top:50%; left:40%"></div>
+      <div class="star" style="top:25%; left:90%"></div>
+      <div class="star" style="top:15%; left:10%"></div>
     </div>
+  </div>
+
+  <div class="title">🌆 Kota Masa Depan - Tahun 2035 🌌</div>
+
+  <div class="hover-car"></div>
+
+  <div class="city">
+    <!-- Futuristic buildings -->
+    <div class="building" style="height: 80px;"></div>
+    <div class="building" style="height: 120px;"></div>
+    <div class="building" style="height: 90px;"></div>
+    <div class="building" style="height: 150px;"></div>
+    <div class="building" style="height: 100px;"></div>
   </div>
 </body>
 </html>
