--- a/app/public/index.html
+++ b/app/public/index.html
@@ -115,7 +115,7 @@
     </div>
   </div>
 
-  <div class="title">🌆 Kota Masa Depan - Tahun 2035 🌌</div>
+  <div class="title">🌆 Kota Masa Belakang - Tahun 2035 🌌</div>
 
   <div class="hover-car"></div>
 
